// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmationDialog should not render cancel button if onCancel function is not provided 1`] = `
<Modal
  animation={true}
  autoFocus={true}
  backdrop={false}
  dialogAs={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "displayName": "ModalDialog",
      "render": [Function],
    }
  }
  enforceFocus={true}
  keyboard={true}
  onHide={null}
  restoreFocus={true}
  show={true}
>
  <ModalHeader
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle>
      Confirm
    </ModalTitle>
  </ModalHeader>
  <ModalBody>
    <p>
      Something happened.
    </p>
  </ModalBody>
  <ModalFooter>
     
    <Button
      active={false}
      className="core-btn"
      disabled={false}
      onClick={[Function]}
      variant="primary"
    >
      OK
    </Button>
  </ModalFooter>
</Modal>
`;

exports[`ConfirmationDialog should render invisible dialog 1`] = `
<Modal
  animation={true}
  autoFocus={true}
  backdrop={false}
  dialogAs={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "displayName": "ModalDialog",
      "render": [Function],
    }
  }
  enforceFocus={true}
  keyboard={true}
  onHide={[Function]}
  restoreFocus={true}
  show={false}
>
  <ModalHeader
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle>
      Confirm
    </ModalTitle>
  </ModalHeader>
  <ModalBody>
    <p>
      Do you confirm?
    </p>
  </ModalBody>
  <ModalFooter>
     
    <Button
      active={false}
      className="core-btn"
      disabled={false}
      onClick={[Function]}
      variant="primary"
    >
      OK
    </Button>
    <Button
      active={false}
      className="core-btn"
      disabled={false}
      onClick={[Function]}
      variant="primary"
    >
      Cancel
    </Button>
  </ModalFooter>
</Modal>
`;

exports[`ConfirmationDialog should render visible dialog with text 1`] = `
<Modal
  animation={true}
  autoFocus={true}
  backdrop={false}
  dialogAs={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "displayName": "ModalDialog",
      "render": [Function],
    }
  }
  enforceFocus={true}
  keyboard={true}
  onHide={[Function]}
  restoreFocus={true}
  show={true}
>
  <ModalHeader
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle>
      Confirm
    </ModalTitle>
  </ModalHeader>
  <ModalBody>
    <p>
      Do you confirm?
    </p>
  </ModalBody>
  <ModalFooter>
     
    <Button
      active={false}
      className="core-btn"
      disabled={false}
      onClick={[Function]}
      variant="primary"
    >
      OK
    </Button>
    <Button
      active={false}
      className="core-btn"
      disabled={false}
      onClick={[Function]}
      variant="primary"
    >
      Cancel
    </Button>
  </ModalFooter>
</Modal>
`;

exports[`ConfirmationDialog should render visible dialog with text and operation in progress 1`] = `
<Modal
  animation={true}
  autoFocus={true}
  backdrop="static"
  dialogAs={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "displayName": "ModalDialog",
      "render": [Function],
    }
  }
  enforceFocus={true}
  keyboard={true}
  onHide={[Function]}
  restoreFocus={true}
  show={true}
>
  <ModalHeader
    closeButton={false}
    closeLabel="Close"
  >
    <ModalTitle>
      Confirm
    </ModalTitle>
  </ModalHeader>
  <ModalBody>
    <p>
      Do you confirm?
    </p>
  </ModalBody>
  <ModalFooter>
    <Spinner
      className="core-spinner"
      size={16}
    />
     
    <Button
      active={false}
      className="core-btn"
      disabled={true}
      onClick={[Function]}
      variant="primary"
    >
      OK
    </Button>
    <Button
      active={false}
      className="core-btn"
      disabled={true}
      onClick={[Function]}
      variant="primary"
    >
      Cancel
    </Button>
  </ModalFooter>
</Modal>
`;
